<resources>
    <string name="app_name">GameNews</string>
    <string name="gamename">Game Name</string>
    <string name="gamedev">Game Developer</string>
    <string name="gameprice">Game Price</string>
    <string name="about">About Me</string>


    <string name="description">Description :</string>
    <string name="share">Share</string>
    <string name="game_rate">Game Rate</string>
    <string name="game_desc">Game Desc</string>
    <string-array name="game_name">
        <item>Persona 4 Golden</item>
        <item>Final Fantasy X</item>
        <item>God Of War</item>
        <item>Dota 2</item>
        <item>Valorant</item>
        <item>Bayonetta</item>
        <item>Hades</item>
        <item>Genshin Impact</item>
        <item>Undertale</item>
        <item>Nier:Automata</item>
    </string-array>
    <string-array name="game_dev">
        <item>Atlus</item>
        <item>Square Enix</item>
        <item>Santa Monica Studio</item>
        <item>Valve</item>
        <item>Riot Games</item>
        <item>Platinum Games</item>
        <item>Supergiant Games</item>
        <item>Hoyoverse</item>
        <item>tobyfox</item>
        <item>Square Enix</item>
    </string-array>
    <string-array name="game_rate">
        <item>87</item>
        <item>84</item>
        <item>95</item>
        <item>90</item>
        <item>80</item>
        <item>90</item>
        <item>93</item>
        <item>86</item>
        <item>92</item>
        <item>84</item>
    </string-array>
    <string-array name="game_price">
        <item>Rp 260.000</item>
        <item>Rp 199.999</item>
        <item>Rp 729.000</item>
        <item>Free</item>
        <item>Free</item>
        <item>Rp 141.999</item>
        <item>Rp 206.999</item>
        <item>Free</item>
        <item>Rp 89.999</item>
        <item>Rp 579.000</item>
    </string-array>
    <string-array name="game_desc">
        <item>Inaba—a quiet town in rural Japan sets the scene for budding adolescence in Persona 4 Golden. A coming of age story that sets the protagonist and his friends on a journey kickstarted by a chain of serial murders. Explore meeting kindred spirits, feelings of belonging, and even confronting the darker sides of one’s self. Persona 4 Golden promises meaningful bonds and experiences shared together with friends  </item>
        <item>story of a star blitzball player, Tidus, who journeys with a young and beautiful summoner named Yuna on her quest to save the world of Spira from an endless cycle of destruction wrought by the colossal menace Sin.</item>
        <item>His vengeance against the gods of Olympus far behind him, Kratos now lives as a man in the lands of Norse Gods and monsters. It is in this harsh, unforgiving world that he must fight to survive… and teach his son to do the same. As mentor and protector to a son determined to earn his respect, Kratos is faced with an unexpected opportunity to master the rage that has long defined him. Questioning the dark lineage he’s passed on to his son, he hopes to make amends for the shortcomings of his past.</item>
        <item>Every day, millions of players worldwide enter battle as one of over a hundred Dota heroes. And no matter if its their 10th hour of play or 1,000th, theres always something new to discover. With regular updates that ensure a constant evolution of gameplay, features, and heroes, Dota 2 has taken on a life of its own.</item>
        <item>A 5v5 character-based tactical shooter. Imagine this: tactical shooter meets hypernatural powers. Everyones got guns and a unique set of abilities, so how do you beat someone with the speed of wind? Use your own moves to outplay them and beat them to the shot. VALORANT is a game for bold strategists who dare to make the unexpected play, because if it wins, it works.</item>
        <item>Bayonetta is a cinematic and stylish action game from the creative mind of Hideki Kamiya. As a gun-wielding witch with powers beyond the comprehension of mere mortals, Bayonetta faces-off against countless enemies in a game of 100 percent pure all-out action. Outlandish finishing moves are performed with acrobatic grace as Bayonetta flows from one fight to another. Bayonetta pushes the limits of the action genre with magnificent over-the-top action and fast-paced, dynamic climax combat.</item>
        <item>Defy the god of the dead as you hack and slash out of the Underworld in this rogue-like dungeon crawler from the creators of Bastion, Transistor, and Pyre.As the immortal Prince of the Underworld, you will wield the powers and mythic weapons of Olympus to break free from the clutches of the god of the dead himself, while growing stronger and unraveling more of the story with each unique escape attempt.</item>
        <item>Welcome to the beautiful fantasy world of Teyvat. Step into a huge open-world of adventure and mystery, where heroic quests await. As a traveller from another world, you must find your lost sibling and unravel Teyvats many secrets. Joined by Paimon, a kind-hearted sprite guide, your mission takes you through beautiful forests, bustling towns, and treacherous dungeons. And while your journey may put you into the path of merciless foes and fiendish puzzles you can count on numerous playable allies to join your custom party of four, harnessing the power of the elements to overcome all obstacles.</item>
        <item>Welcome to UNDERTALE. In this RPG, you control a human who falls underground into the world of monsters. Now you must find your way out... </item>
        <item>NieR: Automata tells the story of androids 2B, 9S and A2 and their battle to reclaim the machine-driven dystopia overrun by powerful machines.Humanity has been driven from the Earth by mechanical beings from another world. In a final effort to take back the planet, the human resistance sends a force of android soldiers to destroy the invaders. Now, a war between machines and androids rages on... A war that could soon unveil a long-forgotten truth of the world.</item>
    </string-array>
    <integer-array name="game_picture">
        <item>@drawable/logo1</item>
        <item>@drawable/logo2</item>
        <item>@drawable/logo3</item>
        <item>@drawable/logo4</item>
        <item>@drawable/logo5</item>
        <item>@drawable/logo6</item>
        <item>@drawable/logo7</item>
        <item>@drawable/logo8</item>
        <item>@drawable/logo9</item>
        <item>@drawable/logo10</item>
    </integer-array>

</resources>